--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "itp-u3-c2-football-dictionaries"]
 	path = itp-u3-c2-football-dictionaries
 	url = https://github.com/gustavomoraes-ufrj/itp-u3-c2-football-dictionaries
+[submodule "mynewrepo"]
+	path = mynewrepo
+	url = https://github.com/gustavomoraes-ufrj/mynewrepo
