--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "mynewrepo"]
 	path = mynewrepo
 	url = https://github.com/gustavomoraes-ufrj/mynewrepo
+[submodule "udemyDockerMastery"]
+	path = udemyDockerMastery
+	url = https://github.com/BretFisher/udemy-docker-mastery.git
